ENH: some updates on the main menu

--- a/RSVP_Language/protocol/langexpy_script/config_language_main_menu.ini
+++ b/RSVP_Language/protocol/langexpy_script/config_language_main_menu.ini
@@ -15,3 +15,5 @@ train_sess = "Session d'entraînement"
 main_sess = Expérience principale
 # Exit option
 exit = Sortie
+# Note
+note = "Attention: Attendez quelques instants après avoir sélectionné votre option, SVP."
