FIXUP: discrimination of tom cond + relabelling of response cond in archi social

--- a/archi/paradigm_descriptors/social.ini
+++ b/archi/paradigm_descriptors/social.ini
@@ -5,10 +5,16 @@ init_columnheaders = 'StartOfBloc.OnsetTime'
 init_label = 'sync'
 cue_columnheaders = None
 cue_labels =  None
+# The two following var are the keys and the values of the dic active_cond.
+# Their elements must follow the corresponding order.
 activecond_columnheaders = 'mot1.OnsetTime', 'ToMaudio.OnsetTime', 'SpeechSound.OnsetTime', 'NonSpeechSound.OnsetTime', 'TriangleMovie.OnsetTime'
-activecond_labels = 'false_belief_video', 'false_belief_audio', 'speech', 'non_speech', 'triangles'
+activecond_labels = 'tom_video', 'tom_audio', 'speech', 'non_speech', 'triangles'
 stim_control = 'triangle_random'
 stim_eoi = 'triangle_intention'
+stim_falsebelief_audio = 'false_belief_audio'
+stim_falsebelief_video = 'false_belief_video'
+stim_mechanistic_audio = 'mechanistic_audio'
+stim_mechanistic_video = 'mechanistic_video'
 ans_columnheader = 'Pourquoi.OnsetTime'
 fix_columnheaders = 'BlankTrials.OnsetTime', 'RestEndOfBloc.OnsetTime'
 fix_labels = 'blank', 'end'
